statum-macros/tests/ui/invalid_state_not_enum.stderr
error: expected `enum`
 --> tests/ui/invalid_state_not_enum.rs:7:1
  |
7 | struct NotAnEnum {
  | ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_state_not_enum.rs:9:2
  |
9 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_not_enum.rs`
